# uotan_riscv_emu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE-MIT  LICENSE-Softfloat  NOTICE  README.md
.github/workflows/: ci.yml
devicetree/: build_dtb.sh  uemu.dts
examples/bare-min/: Makefile  app.c  boot.S  link.ld
examples/intr-test/: Makefile  app.c  asm.txt  boot.S
examples/smc/: Makefile  link.ld  smc_test.S
examples/sv39-test/: Makefile  link.ld  main.c  start.S
examples/trap-test/: Makefile  trap_test.S
include/: common.h
include/core/: cpu.h  decode.h  entropy.h  fpu.h  mem.h  riscv.h
include/core/cpu/: csr.h  decode.h  dispatch.h  exec.h  fpu.h  insn_implemented.h  interpreter.h  jit.hpp  jit_v1.hpp  jit_v2.hpp  system.h
include/device/: bus.h  clint.h  dram.h  goldfish_battery.h  goldfish_events.h  goldfish_rtc.h  plic.h  rtc.h  sifive_test.h  simple_fb.h  uart.h  uart16550.h  virtio.h
include/ui/: ui.h
include/utils/: alarm.h  arg_handler.h  difftest-defs.h  difftest.h  elf.h  fifo.h  gdbstub.h  logger.h  lru_cache.hpp  misc.h  slowtimer.h  timer.h
linux-config/: defconfig
software/: README.md  uemu.dts  uemu_defconfig
src/: builtin_fw.c  dummy.cpp  main.c  ui.c
src/core/: cpu.c  entropy.c  mem.c  riscv.c
src/core/cpu/: csr.c  decode.c  dispatch.cpp  exec.c  interpreter.c  jit.cpp  jit_v1.cpp  jit_v2.cpp  migrater.py  system.c
src/device/: bus.c  clint.c  clint.cpp  dram.c  goldfish_battery.c  goldfish_events.c  goldfish_rtc.c  plic.c  plic.cpp  rtc.c  sifive_test.c  simple_fb.c  simple_fb.cpp  uart.c  uart16550.c  virtio-blk.c
src/ui/: ui.c  ui.cpp  uotan_bmp.hpp
src/utils/: alarm.cpp  arg_handler.c  difftest.c  elf.c  gdbstub.c  logger.cpp  misc.c  slowtimer.cpp  timer.c
tests/: test.cpp  test_main.cpp
tests/alu-tests/: gen-tests.cpp  gen-tests.hpp
tests/bus-tests/: simple-uart.c  simple-uart.h
tests/m_mode-tests/: intr_tests.hpp  trap_tests.hpp
tests/riscv-tests/: test-common.cpp  test-common.hpp
tests/test-programs/: bare-min.hpp  smc.hpp
tests/utils/: test_utils.cpp  test_utils.hpp
tools/spike-diff/: difftest.cpp
verif/: config.ini
verif/sail_cSim/: riscof_sail_cSim.py
verif/uemu/: riscof_uemu.py  uemu_isa.yaml
verif/uemu/env/: model_test.h
